@@ -48,6 +48,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Added a Content-Disposition header to thumb.php output
 * Improved thumb.php error handling
 * Display file history on local image description pages of shared images
+* Added $wgArticleRobotPolicies
 
 
 == Bugfixes since 1.10 ==
